--- a/music-escape-room/src/rooms/practice-room/practice-room.css
+++ b/music-escape-room/src/rooms/practice-room/practice-room.css
@@ -8,6 +8,18 @@
   min-height: 100vh;
 }
 
+
+.modal-body {
+  padding: 20px;
+  background-image: url('../../assets/puzzle-background-img.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 300px;
+  border-radius: 0 0 15px 15px;
+}
+
+
 .room-container {
   position: relative;
   display: inline-block;
