--- a/music-escape-room/src/components/home.css
+++ b/music-escape-room/src/components/home.css
@@ -21,7 +21,7 @@
   margin-top: 20px;
   padding: 15px 30px;
   font-size: 1.2rem;
-  color: #fff;
+  color: brown;
   background-color: rgba(0, 0, 0, 0.6);
   border: none;
   border-radius: 8px;
